<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp">

    <!-- Título -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10dp" />

    <!-- Etiqueta de correo -->
    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:layout_marginTop="20dp" />

    <!-- Campo de correo -->
    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mailIngresa"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp" />

    <!-- Etiqueta de contraseña -->
    <TextView
        android:id="@+id/label_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginTop="20dp" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passIngresa"
        android:inputType="textPassword"
        android:layout_marginTop="8dp" />

    <!-- Botón de login -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/login" />
</LinearLayout>
