<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="10dp"
        android:layout_margin="1dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="Logo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:elevation="4dp" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/registro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:elevation="4dp" />

</LinearLayout>
